--- a/Taxopark/src/main/resources/templates/index.html
+++ b/Taxopark/src/main/resources/templates/index.html
@@ -2,9 +2,9 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>IndexPage</title>
 </head>
 <body>
-    <h1 th:text="Hello">hello text</h1>
+    <h1>Hello</h1>
 </body>
 </html>
