added update foonction

--- a/Taxopark/src/main/resources/templates/index.html
+++ b/Taxopark/src/main/resources/templates/index.html
@@ -5,6 +5,10 @@
     <title>IndexPage</title>
 </head>
 <body>
-    <h1>Hello</h1>
+    <h1>Welcome to Taxopark</h1>
+
+    <form action="/user/account" method="GET">
+        <button type="submit">Login</button>
+    </form>
 </body>
 </html>
