--- a/Taxopark/src/main/resources/templates/index.html
+++ b/Taxopark/src/main/resources/templates/index.html
@@ -7,6 +7,8 @@
 <body>
     <h1>Welcome to Taxopark</h1>
 
+    <p th:text="${name}">klhagdhfh</p>
+
     <form action="/user/account" method="GET">
         <button type="submit">Login</button>
     </form>
