--- a/Taxopark/src/main/resources/templates/edit-person.html
+++ b/Taxopark/src/main/resources/templates/edit-person.html
@@ -25,6 +25,25 @@
 
         <button  type="submit">Update</button>
     </form>
+
+    <form class="form-signin" method="post" action="/user/account/edit/person/pass">
+        <h4 class="form-signin-heading">Update Password</h4>
+        <p>
+            <label for="oldPass">Enter old password</label>
+            <input type="password" id="oldPass" name="oldPass">
+        </p>
+
+        <p>
+            <label for="newPass">Enter new password</label>
+            <input type="password" id="newPass" name="newPass">
+        </p>
+
+        <p>
+            <label for="repeatPass">Repeat new password</label>
+            <input type="password" id="repeatPass" name="repeatPass">
+        </p>
+        <button  type="submit">Update</button>
+    </form>
 </div>
 </body>
 </html>
