--- a/Taxopark/src/main/resources/templates/userAccount.html
+++ b/Taxopark/src/main/resources/templates/userAccount.html
@@ -24,6 +24,10 @@
     <span> car : </span>
     <span th:text="${car.getModel()}"/>
 
+
+    <br>
+    <span> earned : </span>
+    <span th:text="${user.getEarned()}"/>
     <br>
     <br>
 <!--    <a th:href="@{/user/account/edit/person}">Edit person data</a>-->
