add separation between user and admin

--- a/Taxopark/src/main/resources/templates/add-car.html
+++ b/Taxopark/src/main/resources/templates/add-car.html
@@ -41,6 +41,11 @@
         <input type="text" id="mileage" name="mileage">
       </p>
 
+      <p>
+        <label for="vin">VIN</label>
+        <input type="text" id="vin" name="vin">
+      </p>
+
       <button  type="submit">Add car</button>
     </form>
   </div>
