--- a/Taxopark/src/main/resources/templates/registration.html
+++ b/Taxopark/src/main/resources/templates/registration.html
@@ -18,8 +18,13 @@
   </p>
   <br>
   <p>
-    <label for="email">Email</label>
-    <input type="text" id="email" name="email" value="email@email.com">
+  <label for="email">Email</label>
+  <input type="text" id="email" name="email" value="email@email.com">
+</p>
+
+  <p>
+    <label for="bankCard">Bank card number</label>
+    <input type="text" id="bankCard" name="bankCard" value="xxxx xxxx xxxx xxxx xxxx">
   </p>
 
   <p>
