--- a/Taxopark/src/main/resources/templates/registration-car.html
+++ b/Taxopark/src/main/resources/templates/registration-car.html
@@ -34,6 +34,12 @@
       <input type="text" id="mileage" name="mileage">
     </p>
 
+    <p>
+      <label for="vin">VIN</label>
+      <input type="text" id="vin" name="vin">
+    </p>
+
+
     <button  type="submit">Next</button>
   </form>
 </body>
