--- a/Taxopark/src/main/resources/templates/index.html
+++ b/Taxopark/src/main/resources/templates/index.html
@@ -7,10 +7,12 @@
 <body>
     <h1>Welcome to Taxopark</h1>
 
-    <p th:text="${name}">klhagdhfh</p>
-
-    <form action="/user/account" method="GET">
-        <button type="submit">Login</button>
+    <form action="/redirect" method="GET">
+        <button type="submit">Sign in</button>
+    </form>
+    <br>
+    <form action="/registration" method="GET">
+        <button type="submit">Sign Up</button>
     </form>
 </body>
 </html>
